// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieReview component Should render according to the snapshot with no review provided 1`] = `
<div>
  <div
    class="review"
  >
    <blockquote
      class="review__quote"
    >
      
      <footer
        class="review__details"
      >
        
      </footer>
    </blockquote>
    0
  </div>
</div>
`;

exports[`MovieReview component Should render according to the snapshot with review provided 1`] = `
<div>
  <div
    class="review"
  >
    <blockquote
      class="review__quote"
    >
      <p
        class="review__text"
      >
        fakeText
      </p>
      <footer
        class="review__details"
      >
        <cite
          class="review__author"
        >
          fakeUserName
        </cite>
        <time
          class="review__date"
          datetime="2020-03-09"
        >
          March 09, 2020
        </time>
      </footer>
    </blockquote>
    <div
      class="review__rating"
    >
      9,9
    </div>
  </div>
</div>
`;
